fix css and js linking to index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo List</title>
-    <link rel="stylesheet" href="todo-list.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <p>Todo List</p>
@@ -22,6 +22,6 @@
       Clear Todo List
     </button>
 
-    <script src="todo-list.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
