add arrow funcions and event listeners

--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
           class="js-name-input name-input"
           maxlength="40"
         />
-        <button onclick="addTodo()" class="add-button">Add</button>
+        <button class="add-button js-add-button">Add</button>
       </div>
 
       <div class="js-container todo-grid"></div>
 
-      <button onclick="clearTodo()" class="js-clear-button clear-button">
-        Clear Todo List
-      </button>
+      <button class="js-clear-button clear-button">Clear Todo List</button>
     </div>
 
     <script src="./index.js"></script>
