add task header

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <button class="add-button js-add-button">Add</button>
       </div>
 
+      <div class="task-header">
+        <hr class="left-hr" />
+        Tasks
+        <hr class="right-hr" />
+      </div>
+
       <div class="js-container todo-grid"></div>
 
       <button class="js-clear-button clear-button">Clear Todo List</button>
