add bg at 701px

--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
   </head>
   <body>
     <div class="container">
-      <div class="todo-app">
+      <main class="todo-app">
         <h2 class="app-name">Task Flow</h2>
 
-        <div class="input-section">
+        <section class="input-section">
           <input
             type="text"
             placeholder="Write some tasks"
             class="input-field"
           />
           <button class="add-button">Add</button>
-        </div>
+        </section>
 
         <ul class="list-container"></ul>
-      </div>
+      </main>
     </div>
 
     <script src="./index.js"></script>
