--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
       </main>
     </div>
 
+    <div class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <input class="date-input" type="date" />
+        <input class="time-input" type="time" />
+        <button class="modal-submit-btn">submit</button>
+      </div>
+    </div>
+
     <script src="./index.js"></script>
   </body>
 </html>
