--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <input class="date-input" type="date" />
         <input class="time-input" type="time" />
         <button class="modal-submit-btn">submit</button>
+        <button class="modal-remove-btn">remove due date</button>
       </div>
     </div>
 
